[build-system]
requires = [
    "setuptools", 
    "wheel", 
    "scikit-build", 
    "cmake", 
    "ninja"
]
build-backend = "setuptools.build_meta"

[project]
name = "geopyv"
version = "0.0.1"
authors = [
  { name="Sam Stanier", email="sas229@cam.ac.uk" },
  { name="Jonathan Smith", email="jdks2@cam.ac.uk" },
]
description = "A PIV/DIC analysis package for Python."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: POSIX :: Linux",
]

[project.urls]
"Homepage" = "https://github.com/sas229/geopyv"
"Bug Tracker" = "https://github.com/sas229/geopyv/issues"
