[build-system]
requires = [
    "setuptools",
    "wheel",
    "scikit-build",
    "cmake",
    "ninja"
]
build-backend = "setuptools.build_meta"

[project]
name = "geopyv"
version = "0.0.19"
authors = [
  { name="Sam Stanier", email="sas229@cam.ac.uk" },
  { name="Jonathan Smith", email="jdks2@cam.ac.uk" },
]
description = "A PIV/DIC analysis package for Python."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: POSIX :: Linux",
]

dependencies = [
    "numpy==1.23.3",
    "opencv-python==4.7.0.68",
    "opencv-contrib-python==4.7.0.68",
    "matplotlib==3.6.3",
    "alive-progress==3.0.1",
    "scipy==1.10.0",
    "gmsh==4.11.1",
    "numpyencoder==0.3.0",
    "pyside6==6.4.2",
    "pre-commit==3.0.2"
]

[project.urls]
"Homepage" = "https://github.com/sas229/geopyv"
"Bug Tracker" = "https://github.com/sas229/geopyv/issues"
